--- a/style.css
+++ b/style.css
@@ -4,13 +4,33 @@ body
 	background-image: url("img/prism.png");
 	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
-	margin-top: 200px;
 }
+
+/*
+.topToLoginAndRegister
+{
+	min-height: 200px;
+} */
 
 p
 {
 	color: white;
 	text-align: center;
+}
+
+.p-content
+{
+	color: white;
+	text-align: justify;
+}
+
+.bo
+{
+	color: #ffffff;
+	text-align: center;
+	font-size: 24px;
+	font-style: italic;
+	margin-top: 0;
 }
 
 h1
@@ -19,6 +39,68 @@ h1
 	color: #ffffff;
 	font-size: 72px;
 	text-align: center;
+	margin-bottom: 0;
+}
+
+h2
+{
+	font-size: 30px;
+	color: #ffffff;
+	margin-top: 50px;
+	
+}
+
+.content 
+{
+	width: 1420px;
+	background-color: #272020;	
+	min-height: 500px;
+	margin-top: 10px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 30px 40px;
+	border-radius: 15px;
+}
+
+#topBar
+{
+	width: 1500px;
+	background-color: #140303;
+	min-height: 50px;
+	margin-top: 10px;
+	margin-left: auto;
+	margin-right: auto;
+	border-radius: 15px;
+	border: 3px solid #000;
+}
+
+.menu a
+{
+	color: #fff;
+	text-decoration: none;
+}
+
+.menu a:hover
+{
+	color: #b9b9b9;
+}
+
+.menu > li
+{
+	display: inline-block;
+	padding-left: 20px;
+	padding-right: 20px;
+	border-right: 1px dashed #fff;
+}
+
+.menu > li:first-child
+{
+	border-left: 1px dashed #fff;
+}
+.menu > li:last-child
+{
+	border-left: 1px dashed #fff;
+	margin-left: 300px; 
 }
 
 .top
@@ -28,6 +110,23 @@ h1
 	border-radius: 30px;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: 200px;
+}
+
+.topPersonalBudget
+{
+	width: 800px;
+	border: 1px solid #ccc;
+	border-radius: 30px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
+}
+
+.columns100
+{
+	width: 100%; 
+	display: flex;
 }
 
 .logIn
@@ -36,6 +135,7 @@ h1
 	width: 802px;
 	margin-left: auto;
 	margin-right: auto;
+	display: flex;
 }
 
 .logInOrRegister
@@ -44,7 +144,6 @@ h1
 	width: 389px;
 	border: 1px solid #ccc; 
 	border-radius: 30px;
-	float: left;
 }
 
 .logInOrRegister:first-child
@@ -107,14 +206,11 @@ input[type=submit]:hover
 
 .col-1
 {
-	float: left;
 	width: 20%;
-
 }
 
 .col-2
 {
-	float: left;
 	width: 80%;
 }
 
