--- a/style.css
+++ b/style.css
@@ -110,35 +110,6 @@ h3
 	border: 3px solid #000;
 }
 
-.menu a
-{
-	color: #fff;
-	text-decoration: none;
-}
-
-.menu a:hover
-{
-	color: #b9b9b9;
-}
-
-.menu > li
-{
-	display: inline-block;
-	padding-left: 20px;
-	padding-right: 20px;
-	border-right: 1px dashed #fff;
-}
-
-.menu > li:first-child
-{
-	border-left: 1px dashed #fff;
-}
-.menu > li:last-child
-{
-	border-left: 1px dashed #fff;
-	margin-left: 300px; 
-}
-
 .top
 {
 	width: 800px;
@@ -370,28 +341,73 @@ input[type=date]:focus
 	margin-bottom: 5px;
 }
 
+.menu
+{
+	height: 35px;
+	line-height: 200%;
+	list-style-type: none;
+	display: flex;
+}
+
+.menu a
+{
+	color: #fff;
+	text-decoration: none;
+	display: block;
+}
+
+.menu a:hover
+{
+	color: #b9b9b9;
+}
+
+.menu > li
+{
+	padding-left: 20px;
+	padding-right: 20px;
+	border-right: 1px dashed #fff;
+}
+
+.menu > li:first-child
+{
+	border-left: 1px dashed #fff;
+}
+.menu > li:last-child
+{
+	border-left: 1px dashed #fff;
+	margin-left: 300px; 
+}
+
 .menu > li > ol 
 {
 	list-style-type: none;
 	padding: 0;
 	margin: 0;
 	height: 40px;
-	display: none;
+	display: none; 
 }
 
 .menu > li > ol > li
 {
-	background-color:#cf6969;
+	background-color:#353535;
 	position: relative;
 	z-index: 100; 
-	border-top: 1px dashed #751b1b;
+	border-top: 1px dashed #fff;
 }
+
 
 .menu > li:hover > ol
 {
 	display: block;
-}
+} 
+
 ul > li > ol > li:hover
 {
-	background-color: #c34f4f;
+	background-color: #131313;
+}
+
+.gap
+{
+	width: 150px;
+	text-align: center;
 }
