--- a/style.css
+++ b/style.css
@@ -7,20 +7,13 @@ body
 	color: white;
 }
 
-/*
-.topToLoginAndRegister
-{
-	min-height: 200px;
-} */
-
 p
 {
 	color: white;
 	text-align: center;
-	
 }
 
-.pLogin
+.p-login
 {
 	color: white;
 	text-align: center;
@@ -98,9 +91,9 @@ h3
 	border-radius: 15px;
 }
 
-#topBar
+#top-bar
 {
-	width: 1500px;
+	width: 1494px;
 	background-color: #140303;
 	min-height: 50px;
 	margin-top: 10px;
@@ -120,7 +113,32 @@ h3
 	margin-top: 200px;
 }
 
-.topPersonalBudget
+.bottom
+{
+	width: 760px;
+	padding: 20px;
+	background-color: #333333;
+	border: 1px solid #fff;
+	border-radius:15px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
+	
+}
+
+.bottom-content
+{
+	width: 1468px;
+	padding: 15px;
+	background-color: #333333;
+	border: 1px solid #696969;
+	border-radius:20px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 10px;
+}
+
+.top-personal-budget
 {
 	width: 800px;
 	border: 1px solid #ccc;
@@ -137,7 +155,7 @@ h3
 	margin-bottom: 10px;
 }
 
-.logIn
+.log-in
 {
 	margin-top: 20px;
 	width: 802px;
@@ -146,7 +164,7 @@ h3
 	display: flex;
 }
 
-.logInOrRegister
+.log-in-or-register
 {
 	min-height: 300px;
 	width: 389px;
@@ -154,7 +172,7 @@ h3
 	border-radius: 30px;
 }
 
-.logInOrRegister:first-child
+.log-in-or-register:first-child
 {
 	margin-right: 20px;
 }
@@ -301,39 +319,63 @@ input[type=date]:focus
 	color: #83AD2F;
 }
 
-.labelInput
-{
-	width: 50px;
-}
-
-.divInput
+.div-input
 {
 	display: flex;
 	margin-bottom: 10px;
 }
 
-.colText
+.col-text
 {
 	width: 80px;
 }
 
-.colInput
+.col-text2
+{
+	width: 240px;
+	margin-top: 30px;
+}
+
+.col-input
 {
 	width: 100px;
 }
 
-.divInputTextArea
+.col-input-2
+{
+	width: 200px;
+	margin-top: 30px;
+}
+
+.col-input-3
+{
+	width:300px;
+}
+
+.menu-select
+{
+	margin-left: auto;
+	margin-right: auto;
+	display: flex;
+	width: 800px;
+}
+
+.select-option
+{
+	padding: 10px 20px;
+}
+
+.div-input-text-area
 {
 	display: flex;
 	margin-top: 10px;
 }
 
-.inputsBody
+.inputs-body
 {
 	width: 400px;
 	margin-left: auto;
 	margin-right: auto;
-
 }
 
 .radio-gap 
@@ -358,17 +400,8 @@ ul a
 
 ul a:hover
 {
-	/*
-	color: #b9b9b9; */
 	color: #000000;
 }
-
-/* 
-.menu > li > .expand-the-menu-li 
-{
-	width: 200px;
-	padding: 0;
-} */
 
 ul > li > ol > li > a
 {
@@ -443,9 +476,5 @@ ul > li > ol > li:hover
 	background-color: #131313;
 }
 
-/*
-.gap
-{
-	width: 150px;
-	text-align: center;
-}  */
+
+
