--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body
 {
 	/* Background pattern from https://www.toptal.com/designers/subtlepatterns/ */
-	background-image: url("img/prism.png");
+	background-image: url("../img/prism.png");
 	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
 	color: white;
