--- a/css/style1.css
+++ b/css/style1.css
@@ -39,6 +39,11 @@ body
     padding: 10px;
 } */
 
+.p-bold
+{
+	font-weight: bold;
+}
+
 .center-td
 {
 	text-align: center;
@@ -210,6 +215,11 @@ a:active {
 	margin: 0;
 	padding: 0;
 } 
+
+/* .sum
+{
+	width: 300px;
+} */
 
 p
 {
